# evaclub-ui/src/app/services/models.ts
@@ -1,5 +1,8 @@
 /* tslint:disable */
 /* eslint-disable */
-export { PageResponseZoneResponse } from './models/page-response-zone-response';
-export { ZoneRequest } from './models/zone-request';
-export { ZoneResponse } from './models/zone-response';
+export type { EventRequest } from './models/event-request';
+export type { EventResponse } from './models/event-response';
+export type { PageResponseEventResponse } from './models/page-response-event-response';
+export type { PageResponseZoneResponse } from './models/page-response-zone-response';
+export type { ZoneRequest } from './models/zone-request';
+export type { ZoneResponse } from './models/zone-response';
