# evaclub-ui/src/app/services/models/event-request.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface EventRequest {
+  defaultLayout?: boolean;
+  enabled?: boolean;
+  eventCover: string;
+  eventDate: string;
+  eventId?: number;
+  name: string;
+}
