# evaclub-ui/src/app/services/models/event-response.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface EventResponse {
+  enabled?: boolean;
+  eventCover?: string;
+  eventDate?: string;
+  eventId?: number;
+  name?: string;
+}
